# Chrona

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  run.bat
src/: main.cpp
src/ai/: AIService.h  NoopAIService.cpp  NoopAIService.h
src/ai/providers/: DeepSeekProvider.cpp  DeepSeekProvider.h
src/app/: AppController.cpp  AppController.h  LocaleService.cpp  LocaleService.h  ScheduleService.cpp  ScheduleService.h  TaskListModel.cpp  TaskListModel.h  ThemeService.cpp  ThemeService.h  TimelineModel.cpp  TimelineModel.h
src/core/models/: CalendarEvent.h  DeadlineReminder.h  ScheduleTypes.h  StudyFrame.h  Task.h  TimeBlock.cpp  TimeBlock.h
src/core/scheduler/: CapacityAnalyzer.cpp  CapacityAnalyzer.h  CascadePlanner.h  ConflictResolver.cpp  ConflictResolver.h  PriorityEvaluator.cpp  PriorityEvaluator.h  TaskScheduler.cpp  TaskScheduler.h  TimeBlockGenerator.cpp  TimeBlockGenerator.h
src/database/: BackupService.cpp  BackupService.h  Database.cpp  Database.h  Migrations.cpp  Migrations.h  Repositories.cpp  Repositories.h
src/i18n/: chrona_en_US.ts  chrona_zh_CN.ts
src/managers/: NLPTaskParser.cpp  NLPTaskParser.h  OCRManager.cpp  OCRManager.h  Scheduler.cpp  Scheduler.h
src/ui/qml/: Main.qml
src/ui/qml/components/: DailyRitualOverlay.qml  IconButton.qml  LanguageToggle.qml  MonthWheelPicker.qml  PriorityPill.qml  QuickAddBar.qml  SegmentedControl.qml  Theme.qml  ThemeToggle.qml  TimeBlock.qml  TimeWheelPicker.qml  TimelineView.qml
src/ui/qml/pages/: CalendarPage.qml  DeadlinePage.qml  InsightsPage.qml  LoginPage.qml  MemoryPage.qml  MonthPage.qml  TimelinePage.qml
src/ui/qml/panels/: CurrentFocusPanel.qml  DailyPlanOverlay.qml  EveningReviewOverlay.qml  Sidebar.qml  TaskDetailPanel.qml
tests/: DatabaseConsistencyTests.cpp  NLPTaskParserTests.cpp  TaskSchedulerTest.cpp
